<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <include
        android:id="@+id/titlebar"
        layout="@layout/layout_titlebar"/>

    <View
        style="@style/divider_height_1"/>

    <TextView
        android:layout_marginTop="@dimen/x32"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginBottom="@dimen/x18"
        android:textColor="@color/pricing_rules_9c"
        android:textSize="@dimen/x26"
        android:text="@string/drawbill_details"
        style="@style/wrap_wrap"/>

    <View
        style="@style/divider_height_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@color/white"
        android:paddingLeft="@dimen/x30"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="@dimen/x90">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/select_bill"
                style="@style/ww_txt_color_gray45_size_28"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="3"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:id="@+id/rg_bill_mode"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/rb_company_bill"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:button="@drawable/selector_registration"
                        android:textSize="@dimen/x28"
                        android:textColor="@color/color_gray_ad"
                        android:text="@string/select_bill"
                        android:checked="true"
                        android:paddingLeft="@dimen/x14"
                        android:layout_height="wrap_content"/>

                    <RadioButton
                        android:id="@+id/rb_personal_bill"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:button="@drawable/selector_registration"
                        android:textSize="@dimen/x28"
                        android:textColor="@color/color_gray_ad"
                        android:text="@string/personal_bill"
                        android:paddingLeft="@dimen/x14"
                        android:layout_height="wrap_content"/>

                </RadioGroup>

            </LinearLayout>

        </LinearLayout>

        <View style="@style/divider_height_1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="@dimen/x90">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bill_mode"
                style="@style/ww_txt_color_gray45_size_28"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@color/color_gray_ad"
                android:textSize="@dimen/x28"
                android:gravity="center_vertical"
                android:text="@string/electronic_invoice"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <View style="@style/divider_height_1"/>

        <!--发票内容-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="@dimen/x90">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bill_content"
                style="@style/ww_txt_color_gray45_size_28"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@color/color_gray_ad"
                android:textSize="@dimen/x28"
                android:gravity="center_vertical"
                android:text="@string/info_service_fee"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <View style="@style/divider_height_1"/>

        <!--发票金额-->
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_height="@dimen/x90">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/bill_price"
                style="@style/ww_txt_color_gray45_size_28"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="3"
                android:textColor="@color/color_ea542c"
                android:textSize="@dimen/x28"
                android:gravity="center_vertical"
                android:text="¥11.00"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>

        <View style="@style/divider_height_1"/>

        <!--企业发票-->
        <LinearLayout
            android:id="@+id/ll_company"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--企业抬头-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="@dimen/x90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/company_rise"
                    style="@style/ww_txt_color_gray45_size_28"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="@color/login_gray_45"
                    android:textColorHint="@color/color_gray_ad"
                    android:textSize="@dimen/x28"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/hint_input_company_rise"
                    android:paddingRight="@dimen/x30"
                    android:layout_height="wrap_content">

                </EditText>

            </LinearLayout>

            <View style="@style/divider_height_1"/>

            <!--纳税人识别号-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="@dimen/x90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/taxpayer_identification_number"
                    style="@style/ww_txt_color_gray45_size_28"/>
                
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <EditText
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textColor="@color/login_gray_45"
                        android:textSize="@dimen/x28"
                        android:textColorHint="@color/color_gray_ad"
                        android:gravity="center_vertical"
                        android:background="@color/white"
                        android:hint="@string/hint_input_nsrsbh"
                        android:paddingLeft="@dimen/x10"
                        android:paddingRight="@dimen/x10"
                        android:layout_height="wrap_content">

                    </EditText>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:gravity="center_vertical"
                        android:drawableLeft="@mipmap/ic_red_refresh"
                        android:drawablePadding="@dimen/x9"
                        android:text="@string/enterprise_credit_code"
                        android:layout_height="wrap_content"/>
                </LinearLayout>

            </LinearLayout>

            <View style="@style/divider_height_1"/>

            <!--更多信息-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="@dimen/x90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/more_info"
                    style="@style/ww_txt_color_gray45_size_28"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColor="@color/login_gray_45"
                    android:textColorHint="@color/color_gray_ad"
                    android:textSize="@dimen/x28"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/hint_more_info"
                    android:paddingRight="@dimen/x30"
                    android:layout_height="wrap_content">

                </EditText>

            </LinearLayout>

        </LinearLayout>

        <!--个人发票-->
        <LinearLayout
            android:id="@+id/ll_personal"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <!--个人姓名-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="@dimen/x90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/personal_name"
                    style="@style/ww_txt_color_gray45_size_28"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColorHint="@color/color_gray_ad"
                    android:textColor="@color/login_gray_45"
                    android:textSize="@dimen/x28"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/hint_input_personal_name"
                    android:paddingRight="@dimen/x30"
                    android:layout_height="wrap_content">

                </EditText>

            </LinearLayout>

            <View style="@style/divider_height_1"/>

            <!--备注说明-->
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_height="@dimen/x90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/note_description"
                    style="@style/ww_txt_color_gray45_size_28"/>

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:textColorHint="@color/color_gray_ad"
                    android:textColor="@color/login_gray_45"
                    android:textSize="@dimen/x28"
                    android:gravity="center_vertical"
                    android:background="@color/white"
                    android:hint="@string/hint_input_note_desc"
                    android:paddingRight="@dimen/x30"
                    android:layout_height="wrap_content">

                </EditText>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View style="@style/divider_height_1"/>

    <TextView
        android:layout_marginTop="@dimen/x32"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginBottom="@dimen/x18"
        android:textColor="@color/pricing_rules_9c"
        android:textSize="@dimen/x26"
        android:text="@string/receiving_info"
        style="@style/wrap_wrap"/>

    <View style="@style/divider_height_1"/>

    <!--电子邮件-->
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingLeft="@dimen/x30"
        android:paddingRight="@dimen/x30"
        android:background="@color/white"
        android:layout_height="@dimen/x90">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/email"
            style="@style/ww_txt_color_gray45_size_28"/>

        <EditText
            android:layout_width="0dp"
            android:layout_weight="3"
            android:textColorHint="@color/color_gray_ad"
            android:textColor="@color/login_gray_45"
            android:textSize="@dimen/x28"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_email"
            android:background="@color/white"
            android:paddingRight="@dimen/x30"
            android:layout_height="wrap_content">

        </EditText>

    </LinearLayout>

    <View style="@style/divider_height_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/login_blue_1A"
        android:drawablePadding="@dimen/x7"
        android:gravity="center_vertical"
        android:drawableLeft="@mipmap/ic_blue_question"
        android:layout_marginTop="@dimen/x28"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/x30"
        android:text="@string/draw_bill_desc"/>

    <TextView
        style="@style/ww_color_white_size_30"
        android:layout_height="@dimen/x88"
        android:background="@drawable/shape_blue_solid"
        android:gravity="center"
        android:text="@string/submit_applications"
        android:id="@+id/tv_submit"
        android:layout_margin="@dimen/x30"
        android:layout_width="match_parent"/>

</LinearLayout>
